# MegaBoy

./: .gitignore  .gitmodules  APU.cpp  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Cartridge.cpp  Cartridge.h  GBCore.cpp  GBCore.h  LICENSE.txt  MBC2.cpp  MBC3.cpp  MBC3.h  MMU.cpp  MegaBoy.js  MegaBoy.sln  MegaBoy.wasm  PPU.cpp  PPU.h  README.md  Shader.h  appConfig.cpp  appConfig.h  bitOps.h  debugUI.cpp  debugUI.h  index.html  inputManager.cpp  inputManager.h  main.cpp  registers.h  shaders.h  squareWave.h
MegaBoy/: APU.cpp  APU.h  CPU.cpp  CPU.h  CPU_interrupts.cpp  Cartridge.cpp  Cartridge.h  DR.MARIO (3670779).megabs  EmptyMBC.h  GBCore.cpp  GBCore.h  GBMultiplayer.cpp  GBMultiplayer.h  GPU.h  HuC1.cpp  HuC1.h  MBC.cpp  MBC.h  MBC1.cpp  MBC1.h  MBC2.cpp  MBC2.h  MBC3.cpp  MBC3.h  MBC5.cpp  MBC5.h  MBCBase.h  MBU.cpp  MBU.h  MMU.cpp  MMU.h  Main.cpp  MegaBoy.vcxproj  MegaBoy.vcxproj.filters  NoMBC.h  PPU.cpp  PPU.h  RTCTimer.cpp  RTCTimer.h  RomOnlyMBC.h  (+26 more)
MegaBoy/Libs/ImGUI/: imgui_impl_opengl3.cpp
MegaBoy/Libs/mini/: ini.h
MegaBoy/Libs/nfd/: nfd.lib  nfd_d.lib
MegaBoy/data/: config.ini  imgui.ini
MegaBoy/data/shaders/: lcd1x_frag.glsl  lcd1x_vertex.glsl  omniscale_frag.glsl  omniscale_vertex.glsl  regular_frag.glsl  regular_vertex.glsl  sameboy-lcd_frag.glsl  sameboy-lcd_vertex.glsl
MegaBoy/saves/SUPER MARIOLAND (7553559)/: quicksave.mbs
src/: CMakeLists.txt  CMakePresets.json  CPU.cpp  CPU.h  CPU_interrupts.cpp  Cartridge.cpp  Cartridge.h  GBCore.cpp  GBCore.h  GBMultiplayer.cpp  GBMultiplayer.h  Joypad.cpp  Joypad.h  MBC.h  MBC1.h  MBCBase.h  MMU.cpp  MMU.h  MegaBoy.cpp  PPU.cpp  PPU.h  PPUCore.cpp  PPUCore.h  RTCTimer.h  SerialPort.cpp  SerialPort.h  Shader.cpp  appConfig.cpp  appConfig.h  debugUI.cpp  debugUI.h  defines.h  gbInputManager.cpp  gbInputManager.h  gbSystem.cpp  gbSystem.h  glFunctions.cpp  inputManager.cpp  inputManager.h  keyBindManager.h  (+4 more)
src/APU/: APU.cpp  APU.h  customWave.h  noiseWave.h  soundWave.h  squareWave.cpp  squareWave.h  sweepWave.h
src/CPU/: CPU.cpp  CPU.h  CPUDisassembly.cpp  CPUInstructions.h  CPUInterrupts.cpp  CPU_interrupts.cpp  instructionsEngine.h  regDefines.h  registers.h
src/Libs/ImGUI/: CMakeLists.txt  imgui_impl_glfw.cpp
src/Libs/emscripten_browser_file/: emscripten_browser_file.h
src/Libs/miniz/: CMakeLists.txt
src/Mappers/: HuC1.cpp  HuC1.h  HuC3.h  HuC3RTC.h  MBC.h  MBC1.cpp  MBC1.h  MBC2.cpp  MBC2.h  MBC3.cpp  MBC3.h  MBC5.cpp  MBC5.h  MBC6.h  MBCBase.h  NoMBC.h  RTC.h  RTC3.cpp  RTC3.h  RTCTimer.cpp  RTCTimer.h
src/PPU/: PPU.h  PPUCore.cpp  PPUCore.h
src/Utils/: bitOps.h  fileUtils.h  glFunctions.cpp  glFunctions.h  memstream.h  pixelOps.h  rngOps.h  stringUtils.h
